5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1672_2473.log
== TEST (2019-04-27 15:15:05) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:15:20) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:15:23) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- EXECUTION TIME:
0.169978
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 4 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
ano invalido
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:18:20) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:18:45) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:20:10) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:22:16) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e)%31 + 7
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:23:01) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e)%31 + 7
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:23:29) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e)%31 + 7
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:23:50) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e + 7)%31
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:24:27) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e)%31 -7
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:24:38) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e)%31 -7
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- EXECUTION TIME:
0.186263
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 4 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:26:00) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e)%31 -7
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:26:28) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e)%31 -7
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:26:38) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e)%31 -7
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:27:22) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099) and (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
	data = (22 +  d + e)%31
	print(data,"- 4 -", ano)
elif (ano == 1954) or (ano == 1981) or (ano == 2049) or (ano == 2076):
	data = (22 + d + e)%31 -7
	print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- EXECUTION TIME:
0.166424
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 4 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:28:33) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		print(data,"- 4 -", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- EXECUTION TIME:
0.137529
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 4 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:28:53) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		print(data,"- 4 -", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:29:25) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		print(data,"- 4 -", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:30:46) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		print(data,"- 4 -", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:31:29) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		print(data,"- 4 -", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:34:13) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		print(data,"- 4 -", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:39:21) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (22 + data)%31
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 17 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:40:08) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = 22 % 31
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 22 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:40:53) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = 22 - data
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - -4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:41:38) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (data - 22) % 4
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 0 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:41:53) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (data - 22) % 4
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 0 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:45:13) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (data - 22) % 4
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 0 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:45:45) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (data - 22) % 4
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data,"- 4 -", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 0 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:50:09) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (4 +  d + e)%31
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 8 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:51:48) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = 3 + b
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 5 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:52:43) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = 3 + b
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 5 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:53:22) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = 3 + a
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 5 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:53:53) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = a
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:54:31) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = a + 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:54:54) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = a + 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = a + 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:57:33) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = a 
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = a 
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:01:54) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 3) + 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 3) + 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:05:00) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 4) + 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 4) + 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:05:18) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 4) + 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 4) + 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:05:51) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 4) + 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 4) + 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:08:34) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 4)
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 4)
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:09:04) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 4)
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 4)
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:10:39) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 4)
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 4)
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:11:13) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 3)
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 3)
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:12:18) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 3)
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 3)
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:12:44) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 3) + 2
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 3) + 2
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:13:39) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 7)
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 7)
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:13:57) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 7)
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 7)
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:14:08) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 7)
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 7)
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:15:40) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = (a % 7)
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (a % 7)
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:16:54) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = d
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:18:08) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = d - 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d - 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 1 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:19:02) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = d - 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d - 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 1 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:19:27) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = d - 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d - 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 1 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 16:19:45) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = d - 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d - 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- EXECUTION TIME:
0.120115
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 1 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 28 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:19:57) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = d - 1
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d - 1
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 1 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:20:59) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = d - 1/2
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d - 1/2
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 1.5 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:24:35) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (d == 0):
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d 
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- ERROR:
File "XXXX", line 12
    print(data, "-", mes, "-", ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:24:45) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (d == 0):
		   print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d 
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- ERROR:
File "XXXX", line 12
    print(data, "-", mes, "-", ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:24:51) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (d == 0):
		   print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d 
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- ERROR:
File "XXXX", line 12
    print(data, "-", mes, "-", ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:31:52) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = d + e
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:35:39) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		mes = d + e
		print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:37:53) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31)
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data1 = (22 +  d + e)%32
			print(data1, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- ERROR:
File "XXXX", line 11
    if (data != 31)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:38:05) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31):
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data1 = (22 +  d + e)%32
			print(data1, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:39:31) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31):
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data1 = (22 +  d + e)%32
			print(data1, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:39:42) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31):
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data1 = (22 +  d + e)%32
			print(data1, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:39:57) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31):
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data1 = (22 +  d + e)%32
			print(data1, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:45:14) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			print(data1, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:45:35) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:45:51) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:46:41) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = d + e
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:46:52) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = d + e
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = d + e
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = d + e
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:53:43) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = b
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 0 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:54:09) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = b
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 0 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:54:54) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = b
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:55:09) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = b
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:55:23) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = b
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:55:55) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (data + 22) % 4 + 2
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:56:47) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (data + 22) % 4 + 2
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:56:47) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (data + 22) % 4 + 2
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:57:11) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = (data + 22) % 4 + 2
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 16:58:35) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 2 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:08:04) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		if (22 +  d + e != 31) and (22 +  d + e % 0):
			data = (22 +  d + e)%31
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if (22 +  d + e != 31) and (22 +  d + e % 0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:16:11) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 2 + 4
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:31:45) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 2 + 4
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:33:33) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 2 + 4
			print(data, "-", mes, "-", ano)
		else: 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:24:36) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 2 + 4
			print(data, "-", mes, "-", ano)
		elif (data == 31): 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:24:46) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)%31
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 2 + 4
			print(data, "-", mes, "-", ano)
		elif (data == 31): 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:27:00) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 2 + 4
			print(data, "-", mes, "-", ano)
		elif (data == 31): 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:27:19) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 2 + 4
			print(data, "-", mes, "-", ano)
		elif (data == 31): 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:27:26) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 2 + 4
			print(data, "-", mes, "-", ano)
		elif (data == 31): 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- EXECUTION TIME:
0.131894
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 4 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - abril - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:29:29) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 4 + 2
			print(data, "-", mes, "-", ano)
		elif (data == 31): 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:29:30) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 4 + 2
			print(data, "-", mes, "-", ano)
		elif (data == 31): 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- OUTPUT:
26 - 4 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:29:48) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 4 + 2
			print(data, "-", mes, "-", ano)
		elif (data == 31): 
			data = 22 + 9
			mes = (data + 22) % 4 + 2
			print(data, "-", mes, "-", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- EXECUTION TIME:
0.229017
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 4 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - abril - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:38:01) 
-- CODE:
ano = int(input("Ano: "))
a = ano % 19
b = ano % 4
c = ano % 7
d = (19*a + 24) % 30
e = (2*b + 4*c + 6*d + 5) % 7

if (ano >= 1900) and (ano <= 2099):
	if (ano != 1954) and (ano != 1981) and (ano != 2049) and (ano != 2076):
		data = (22 +  d + e)
		if (data != 31) and (data % 2 == 0):
			data = (22 +  d + e)%31
			mes = (22 +  d + e) % 4 + 2
			print(data, "-", mes, "-", ano)
		elif (data == 31): 
			data = 22 + 9
			print(data, "- marco -", ano)
	else:
		data = (22 + d + e)%31 - 7
		mes = "abril"
		print(data, "-", mes, "-", ano)
else:
	print("ano invalido")
	
-- EXECUTION TIME:
0.110606
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 4 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - abril - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
